src/Sulu/Bundle/AdminBundle/Resources/js/components/Table/table.scss
@import '../../containers/Application/colors.scss';

$headerTextColor: $white;
$headerCellBackgroundColor: $blueZodiac;
$headerButtonCellTextColor: rgba($silverChalice, .25);
$headerButtonCellBorderColor: rgba($silverChalice, .25);
$cellTextColor: $blueZodiac;
$cellTextColorActive: $white;
$cellBackgroundColor: $white;
$cellBorderColor: $cellBackgroundColor;
$cellBorderColorActive: $shakespeare;
$cellBackgroundColorActive: $shakespeare;
$buttonCellBorderColor: $white;
$emptyMessageColor: $silver;
$rowMinHeight: 40px;
$paddingCell: 4px;
$borderWidth: 1px;

.table {
    border-collapse: separate;
    border-spacing: 0 5px;
    margin: -5px 0;
    overflow: hidden;
    min-width: 100%;
    height: 100%;
}

.header {
    color: $headerTextColor;

    & > tr {
        height: 60px;
    }
}

.header-cell {
    padding: 20px;
    font-size: 12px;
    font-weight: normal;
    background-color: $headerCellBackgroundColor;

    &:first-child {
        border-radius: 3px 0 0 3px;
    }

    &:last-child {
        border-radius: 0 3px 3px 0;
    }

    > span {
        display: inline-flex;
        align-items: center;
    }

    &.clickable {
        padding: 0;

        button {
            height: 60px;
            padding: 5px 20px;
            color: inherit;
            border: none;
            background: none;
            display: inline-flex;
            align-items: center;

            &:not(:disabled) {
                cursor: pointer;
            }
        }
    }
}

.cell,
.header-cell {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    max-width: 250px;
    text-align: left;
}

.cell-content {
    display: flex;
    align-items: center;
}

.toggle-icon {
    cursor: pointer;
    display: inline-block;
    width: 20px;
}

.cell-select {
    padding-right: 10px;
}

.header-cell-sort-icon {
    padding-left: 10px;
}

.header-button-cell {
    width: 1px;
    border-right: $borderWidth solid $headerButtonCellBorderColor;
    color: $headerButtonCellTextColor;
    text-align: center;
}

.row {
    &:hover {
        .cell {
            border-color: $cellBorderColorActive;
        }
    }
}

.button-cell,
.header-button-cell {
    width: 56px;
}

.cell,
.button-cell {
    margin: 0;
    padding: $paddingCell 20px;
    font-size: 12px;
    border-width: $borderWidth 0;
    border-style: solid;
    border-color: $cellBorderColor;
    color: $cellTextColor;
    background-color: $cellBackgroundColor;

    &:first-child {
        border-radius: 3px 0 0 3px;
        border-left-width: $borderWidth;
    }

    &:last-child {
        border-radius: 0 3px 3px 0;
        border-right-width: $borderWidth;
    }

    &.small {
        width: 1px;
    }
}

.cell-content {
    height: 100%;
    min-height: calc($rowMinHeight - $paddingCell * 2 - $borderWidth * 2);
    display: flex;
    align-items: center;
}

.button-cell {
    padding: 0;
    background-color: $cellBackgroundColor;
    color: $cellTextColorActive;
    text-align: center;

    &:hover {
        button {
            visibility: visible;
            background-color: $cellBackgroundColorActive;
            border-right: $borderWidth solid $buttonCellBorderColor;
        }
    }

    button {
        visibility: hidden;
        width: 100%;
        height: 100%;
        border: none;
        color: inherit;
        cursor: pointer;
        background-color: transparent;
    }
}

.table-placeholder-area {
    color: $emptyMessageColor;
    text-align: center;
    padding: 40px;
}

.table-placeholder-icon {
    font-size: 38px;
}

.table-placeholder-text {
    margin-top: 15px;
    font-size: 12px;
    font-weight: bold;
}

